<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name" translatable="false">helios. TALK</string>
    <string name="app_package" translatable="false">eu.h2020.helios_social.happ.helios.talk</string>
    <string name="setup_title">Welcome to helios. TALK</string>
    <string name="setup_name_explanation">Your nickname will be shown next to any content you post. You can\'t change it after creating your account.</string>
    <string name="setup_next">Next</string>
    <string name="signup_next">Sign Up</string>
    <string name="setup_password_intro">Choose a Password</string>
    <string name="setup_password_explanation">Your helios. account is stored encrypted on your device, not in the cloud. If you forget your password or uninstall helios. TALK, there\'s no way to recover your account.\n\nChoose a long password that\'s hard to guess, such as four random words, or ten random letters, numbers and symbols.</string>
    <string name="setup_doze_title">Background Connections</string>
    <string name="setup_doze_intro">To receive messages, helios. TALK needs to stay connected in the background.</string>
    <string name="setup_doze_explanation">To receive messages, helios. TALK needs to stay connected in the background. Please disable battery optimizations so helios. TALK. can stay connected.</string>
    <string name="setup_doze_button">Allow Connections</string>
    <string name="choose_nickname">Choose your nickname</string>
    <string name="choose_password">Choose your password</string>
    <string name="confirm_password">Confirm your password</string>
    <string name="name_too_long">Name is too long</string>
    <string name="message_too_long">Message is too long</string>
    <string name="password_too_weak">Password is too weak</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="create_account_button">Create Account</string>
    <string name="more_info">More Information</string>
    <string name="don_t_ask_again">Don\'t ask again</string>
    <string name="setup_huawei_text">Please tap the button below and make sure helios. TALK is protected in the \"Protected Apps\" screen.</string>
    <string name="setup_huawei_button">Protect helios. TALK</string>
    <string name="setup_huawei_help">If helios. TALK is not added to the protected apps list, it will be unable to run in the background.</string>
    <string name="warning_dozed">%s was unable to run in the background</string>
    <string name="enter_password">Password</string>
    <string name="try_again">Wrong password, try again</string>
    <string name="dialog_title_cannot_check_password">Cannot Check Password</string>
    <string name="dialog_message_cannot_check_password">helios. TALK cannot check your password. Please try rebooting your device to solve this problem.</string>
    <string name="sign_in_button">Sign In</string>
    <string name="forgotten_password">I have forgotten my password</string>
    <string name="dialog_title_lost_password">Lost Password</string>
    <string name="dialog_message_lost_password">Your helios. TALK account is stored encrypted on your device, not in the cloud, so we can\'t reset your password. Would you like to delete your account and start again?\n\nCaution: Your identities, contacts and messages will be permanently lost.</string>
    <string name="startup_failed_notification_title">helios. TALK could not start</string>
    <string name="startup_failed_notification_text">Tap for more information.</string>
    <string name="startup_failed_activity_title">helios. TALK Startup Failure</string>
    <string name="startup_failed_db_error">For some reason, your helios. TALK database is corrupted beyond repair. Your account, your data and all your contacts are lost. Unfortunately, you need to reinstall helios. TALK or set up a new account by choosing \'I have forgotten my password\' at the password prompt.</string>
    <string name="startup_failed_data_too_old_error">Your account was created with an old version of this app and cannot be opened with this version. You must either reinstall the old version or set up a new account by choosing \'I have forgotten my password\' at the password prompt.</string>
    <string name="startup_failed_data_too_new_error">This version of the app is too old. Please upgrade to the latest version and try again.</string>
    <string name="startup_failed_service_error">helios. TALK was unable to start a required plugin. Reinstalling helios. TALK usually solves this problem. However, please note that you will then lose your account and all data associated with it since helios. TALK is not using central servers to store your data on.</string>
    <plurals name="expiry_warning">
        <item quantity="one">This is a test version of helios. TALK. Your account will expire in %d day and cannot be renewed.</item>
        <item quantity="other">This is a test version of helios. TALK. Your account will expire in %d days and cannot be renewed.</item>
    </plurals>
    <string name="expiry_date_reached">This software has expired.\nThank you for testing!</string>
    <string name="download_helios">To continue using helios. TALK, please download the latest release.</string>
    <string name="create_new_account">You will need to create a new account, but you can use the same nickname.</string>
    <string name="download_helios_button">Download Latest Release</string>
    <string name="startup_open_database">Decrypting Database…</string>
    <string name="welcome">Connecting to helios. TALK...</string>
    <string name="welcome_to_talk">Welcome to helios. TALK</string>
    <string name="enjoy">Enjoy the helios. TALK experience!</string>
    <string name="context_social_network">A context aware distributed social networking framework</string>
    <string name="title_context_relations">Contextual based relations</string>
    <string name="title_secure_connections">Secure Connections</string>
    <string name="title_forums_connections">Connect through forums</string>
    <string name="details_context_relations">Offers the opportunity to connect with new people, practice new activities or gain knowledge about certain topics. It is used by people with common interests.</string>
    <string name="details_secure_connections">The communications are fully distributed  on the P2P network of HELIOS, each user is the sole owner of their own information,  hereby safeguarding our privacy.</string>
    <string name="details_forums_connections">Users can create and share forums with their connections. In these forums, HELIOS users can discuss topics of interest anonymously. Public Forums are discoverable by other users and a forum can be also connected with a specific location. </string>
    <string name="details_account">Choose a nickname and a password. Be sure, you remember your password, otherwise you would not be able to access your communications. The password is used to encrypt and decrypt your local database.</string>
    <string name="startup_migrate_database">Upgrading Database…</string>
    <string name="startup_compact_database">Compacting Database…</string>
    <string name="nav_drawer_open_description">Open the navigation drawer</string>
    <string name="nav_drawer_close_description">Close the navigation drawer</string>
    <string name="contact_list_button">Contacts</string>
    <string name="groups_button">Private Groups</string>
    <string name="communities_button">Communities</string>
    <string name="conversations_title">Conversations</string>
    <string name="lock_button">Lock App</string>
    <string name="settings_button">Settings</string>
    <string name="sign_out_button">Sign Out</string>
    <string name="transport_tor">Internet</string>
    <string name="transport_bt">Bluetooth</string>
    <string name="transport_lan">Wi-Fi</string>
    <string name="reminder_notification_title">Signed out of helios. TALK</string>
    <string name="reminder_notification_text">Tap to sign back in.</string>
    <string name="reminder_notification_channel_title">helios. TALK Sign-in Reminder</string>
    <string name="reminder_notification_dismiss">Dismiss</string>
    <string name="ongoing_notification_title">Signed into helios. TALK</string>
    <string name="ongoing_notification_text">Touch to open helios. TALK.</string>
    <plurals name="private_message_notification_text">
        <item quantity="one">New private message.</item>
        <item quantity="other">%d new private messages.</item>
    </plurals>
    <plurals name="group_message_notification_text">
        <item quantity="one">New group message.</item>
        <item quantity="other">%d new group messages.</item>
    </plurals>
    <plurals name="forum_post_notification_text">
        <item quantity="one">New forum post.</item>
        <item quantity="other">%d new forum posts.</item>
    </plurals>
    <string name="help">Help</string>
    <string name="connection_requests">Connection Requests</string>
    <string name="groups_member_list">Member List</string>
    <string name="groups_invite_members">Invite Members</string>
    <string name="forums_leave">Leave Forum</string>
    <string name="forums_reveal_self">Reveal Self</string>
    <string name="forums_hide_self">Hide Self</string>
    <string name="forums_info">Forum Info</string>
    <string name="forum_tags">tags (comma seperated):</string>
    <string name="forum_tags_hint">Choose relevant to forum topic tags</string>
    <string name="forum_new_member">Default new forum member role:</string>
    <string name="forum_type">Forum Type:</string>
    <string name="forum_location">Define Forum Location:</string>
    <string name="choose_radius_hint">Radius</string>
    <string name="choose_context_location_lat">Latitude</string>
    <string name="choose_context_location_lng">Longitude</string>
    <string name="get_current_location_button">Get Current Location</string>
    <string name="create_context_button">Create Context</string>
    <string name="remove_context">Leave Context</string>
    <string name="add_contacts_to_context">Invite Contacts</string>
    <string name="choose_forum_hint">Choose a name for your forum</string>
    <string name="create_forum_button">Create Forum</string>
    <string name="pref_language_title">Language &amp; region</string>
    <string name="display_settings_title">Display</string>
    <string name="pref_theme_title">Theme</string>
    <string name="security_settings_title">Security</string>
    <string name="pref_lock_title">App lock</string>
    <string name="pref_lock_summary">Use the device\'s screen lock to protect helios. TALK while signed in</string>
    <string name="pref_lock_timeout_title">App lock inactivity timeout</string>
    <string name="pref_lock_timeout_summary">When not using helios. TALK, automatically lock it after %s</string>
    <string name="change_password">Change password</string>
    <string name="profiling_setting_title">Profiling</string>
    <string name="profiling_setting">Content-Aware Profiling</string>
    <string name="notification_settings_title">Notifications</string>
    <string name="notify_sign_in_title">Remind me to sign in</string>
    <string name="notify_sign_in_summary">Show a reminder when the phone starts or the app has been updated</string>
    <string name="notify_private_messages_setting_title">Private messages</string>
    <string name="notify_private_messages_setting_summary">Show alerts for private messages</string>
    <string name="notify_group_messages_setting_title">Group messages</string>
    <string name="notify_group_messages_setting_summary">Show alerts for group messages</string>
    <string name="notify_vibration_setting">Vibrate</string>
    <string name="notify_sound_setting">Sound</string>
    <string name="invitations">Connection Notifications</string>
</resources>