<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/contexts"
            android:title="Contexts">
            <menu>

            </menu>
        </item>
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_btn_profile"
            android:icon="@drawable/ic_profile"
            android:title="Profile" />
        <!--<item
            android:id="@+id/nav_btn_stats"
            android:icon="@drawable/ic_insert_chart_24px"
            android:title="Stats" />-->
        <item
            android:id="@+id/nav_btn_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings_button" />
        <item
            android:id="@+id/nav_btn_lock"
            android:icon="@drawable/startup_lock"
            android:title="@string/lock_button"
            android:visible="false" />
        <item
            android:id="@+id/nav_btn_signout"
            android:icon="@drawable/ic_signout"
            android:title="@string/sign_out_button" />
    </group>

</menu>