<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">

	<TextView
		android:id="@+id/textView"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="@dimen/margin_large"
		android:layout_marginLeft="@dimen/margin_large"
		android:layout_marginTop="@dimen/margin_large"
		android:layout_marginEnd="@dimen/margin_large"
		android:layout_marginRight="@dimen/margin_large"
		android:layout_marginBottom="16dp"
		android:textSize="@dimen/text_size_medium"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/connections_img"
		tools:text="@string/setup_huawei_text" />

	<androidx.appcompat.widget.AppCompatImageView
		android:id="@+id/checkImage"
		android:layout_width="24dp"
		android:layout_height="24dp"
		android:layout_margin="@dimen/margin_medium"
		android:src="@drawable/ic_check_white"
		android:visibility="invisible"
		app:layout_constraintBottom_toBottomOf="@+id/button"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="@+id/button"
		app:tint="?attr/colorControlNormal"
		tools:ignore="ContentDescription" />

	<Button
		android:id="@+id/button"
		style="@style/BasicButton"
		android:layout_width="250dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="26dp"
		android:background="@drawable/helios_button"
		app:layout_constraintEnd_toStartOf="@+id/helpButton"
		app:layout_constraintStart_toEndOf="@+id/checkImage"
		app:layout_constraintTop_toBottomOf="@+id/textView"
		tools:text="@string/setup_huawei_button" />

	<ImageButton
		android:id="@+id/helpButton"
		style="@style/HeliosButtonFlat.Positive"
		android:layout_width="24dp"
		android:layout_height="24dp"
		android:layout_margin="@dimen/margin_medium"
		android:contentDescription="@string/help"
		android:src="@drawable/ic_help_outline_white"
		android:tint="@color/helios_button_text_positive"
		app:layout_constraintBottom_toBottomOf="@+id/button"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toTopOf="@+id/button" />

</merge>